# cleff

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  cabal.project  cleff.cabal  effect.cabal  fourmolu.yaml  hie.yaml  package.yaml  speff.cabal  stack.yaml
.github/: stack-8.10.7.yaml  stack-8.6.5.yaml  stack-8.8.4.yaml  stack-9.0.1.yaml  stack-9.0.2.yaml  stack-9.2.2.yaml  stack-9.2.5.yaml  stack-9.4.4.yaml
.github/workflows/: build.yaml
bench/: BenchCountdown.hs  BenchPyth.hs  Main.hs
cleff/: CHANGELOG.md  cleff.cabal  package.yaml
cleff-core/: CHANGELOG.md  cleff-core.cabal  package.yaml
cleff-core/src/: Cleff.hs
cleff-core/src/Cleff/: Error.hs  Writer.hs
cleff-core/src/Cleff/Internal/: Handler.hs
cleff-kvstore/: CHANGELOG.md  cleff-kvstore.cabal  package.yaml
cleff-plugin/: CHANGELOG.md  LICENSE  README.md  cleff-plugin.cabal  package.yaml
cleff-plugin/src/Cleff/: Plugin.hs
cleff-plugin/src/Cleff/Plugin/: Internal.hs
cleff-plugin/test/: CleffSpec.hs  EffectfulSpec.hs  Main.hs  PolysemySpec.hs
cleff-resourcet/: CHANGELOG.md  cleff-resourcet.cabal  package.yaml
cleff-time/: CHANGELOG.md  cleff-time.cabal  package.yaml
cleff-time/src/Cleff/: Time.hs
cleff/example/: Filesystem.hs
cleff/src/Cleff/: Input.hs  KVStore.hs  Output.hs  Timeout.hs  Trace.hs
cleff/test/: TimeoutSpec.hs
docs/: plugin-spec.md
example/: Broker.hs  Context.hs  Filesystem.hs  Main.hs  Teletype.hs
scripts/: upload-candidate.sh
src/: Cleff.hs  Effect.hs  EffectExample.hs
src/Cleff/: Error.hs  Fail.hs  Fresh.hs  Input.hs  Internal.hs  KVStore.hs  Mask.hs  Output.hs  Prim.hs  Reader.hs  Resource.hs  State.hs  Timeout.hs  Trace.hs  Writer.hs
src/Cleff/Internal/: Any.hs  Base.hs  Effect.hs  Env.hs  Handler.hs  Instances.hs  Interpret.hs  Monad.hs  Rec.hs  Stack.hs  TH.hs  ThreadVar.hs  Vec.hs
src/Cleff/Internal/Data/: Any.hs  Mem.hs
src/Data/: Any.hs  Mem.hs  PrimVec.hs  RadixVec.hs  Rec.hs  ThreadVar.hs
src/Effect/: Bracket.hs  Error.hs  Fail.hs  Fresh.hs  IO.hs  Mask.hs  Prim.hs  Reader.hs  Resource.hs  State.hs  Timeout.hs  Trace.hs  Writer.hs
src/Effect/Internal/: Base.hs  Handler.hs  Monad.hs  TH.hs
src/Effect/Primitive/: Exception.hs  IO.hs  IORef.hs  MVar.hs  STM.hs
src/Sp/: Eff.hs  Util.hs
src/Sp/Internal/: Ctl.hs  Env.hs  Monad.hs
test/: ConcurrencySpec.hs  EffectExample.hs  ErrorSpec.hs  HigherOrderSpec.hs  InterposeSpec.hs  MaskSpec.hs  RecSpec.hs  StateSpec.hs  ThSpec.hs  TimeoutSpec.hs
