cabal-version: 3.0

name:          cleff-plugin
version:       0.1.1.0
author:        Xy Ren
maintainer:    xy.r@outlook.com
license:       BSD-3-Clause
copyright:     2022 Xy Ren
homepage:      https://github.com/re-xyr/cleff
bug-reports:   https://github.com/re-xyr/cleff/issues
tested-with:   GHC == {9.2.5, 9.0.2, 8.10.7, 8.8.4}
category:      Control, Effect, Language
synopsis:      Automatic disambiguation for extensible effects
license-file:  LICENSE

extra-source-files:
  CHANGELOG.md
  README.md

description:
  Please see the README on GitHub at <https://github.com/re-xyr/cleff/tree/master/cleff-plugin#readme>

source-repository head
  type:      git
  location:  https://github.com/re-xyr/cleff

common lang
  default-language: Haskell2010
  build-depends:
    base                 >= 4.12 && < 4.18,
    cleff                >= 0.1 && < 0.4,
    containers           >= 0.5 && < 0.7,
    ghc                  >= 8.6 && < 9.3,
    ghc-tcplugins-extra  >= 0.3 && < 0.5,
  ghc-options:
    -Wall
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wno-unticked-promoted-constructors
    -Wpartial-fields
    -Wunused-type-patterns
  if impl(ghc >= 8.8)
    ghc-options: -Wmissing-deriving-strategies
  default-extensions:
    BangPatterns
    BlockArguments
    DerivingStrategies
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    NoStarIsType
    PolyKinds
    ScopedTypeVariables
    TupleSections
    UnicodeSyntax

library
  import:          lang
  hs-source-dirs:  src
  ghc-options:
    -Wmissing-export-lists
  exposed-modules:
    Cleff.Plugin
    Cleff.Plugin.Internal

test-suite cleff-plugin-test
  import:          lang
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Main.hs
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
    cleff,
    cleff-plugin,
  default-extensions:
    DataKinds
    FunctionalDependencies
    TemplateHaskell
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    RankNTypes
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
  other-modules:
    CleffSpec
